--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
 MONGO_URI=mongodb+srv://TFMAzul:EquipoAzul123@cluster0.8lsffxq.mongodb.net/link2play
-JWT_SECRET=  otrajwttoken
+JWT_SECRET=  h1Sz9p2@!0TdqG^Ff93kLfZ6v!mA0r3X$Y2wK
