--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=3000
 MONGO_URI=mongodb+srv://TFMAzul:EquipoAzul123@cluster0.8lsffxq.mongodb.net/link2play
 JWT_SECRET=  h1Sz9p2@!0TdqG^Ff93kLfZ6v!mA0r3X$Y2wK
+RAWG_API_KEY=  7f3e4b92da6c40cc9062eb8dc27e9d8b
