--- a/package.json
+++ b/package.json
@@ -4,10 +4,13 @@
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
+    "express-session": "^1.18.1",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.2",
     "nodemailer": "^7.0.4",
     "openai": "^5.8.2",
+    "passport": "^0.7.0",
+    "passport-steam": "^1.0.18",
     "socket.io": "^4.8.1"
   },
   "name": "tfm-backend-azul",
